TH-176-harmony: Fix logo squished in mobile cart (#60)

--- a/themes/harmony/styles/navbar.scss
+++ b/themes/harmony/styles/navbar.scss
@@ -275,8 +275,15 @@
     padding: 20px 16px;
     display: block;
 
-    img {
-      max-height: 40px;
+    a {
+      display: inline-block;
+      width: fit-content;
+
+      img {
+        max-height: 40px;
+        max-width: 100%;
+        width: fit-content;
+      }
     }
   }
 
@@ -303,7 +310,8 @@
   }
 
   .close-drawer-btn {
-    float: left;
+    position: absolute;
+    inset-inline-start: 0;
     cursor: pointer;
     width: 40px;
     height: 40px;
